# otus_cpp_prof_hw5

./: .gitignore  README.md  annotated.html  class_circle-members.html  class_editor_view.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  doxygen_crawl.html  editor__model_8h.html  editor__view_8cpp.html  editor__view_8h_source.html  globals_func.html  hierarchy.html  main_8h_source.html  menu__enums_8h_source.html
.github/workflows/: Documentation.yml  cmake-multi-platform.yml
doc/: Doxyfile
doc/html/: circle_8cpp.html  circle_8h.html  circle_8h_source.html  class_circle.html  class_editor_controller-members.html  class_editor_controller.html  class_editor_model-members.html  class_editor_model.html  class_editor_view-members.html  class_line-members.html  class_line.html  class_shapes-members.html  class_shapes.html  classes.html  editor__controller_8cpp.html  editor__controller_8h.html  editor__controller_8h_source.html  editor__model_8cpp.html  editor__model_8h_source.html  editor__view_8h.html  files.html  functions.html  functions_func.html  globals.html  globals_enum.html  index.html  line_8cpp.html  line_8h.html  line_8h_source.html  main_8cpp.html  main_8h.html  menu__enums_8h.html  shape_8h.html  shape_8h_source.html
doc/latex/: annotated.tex  circle_8cpp.tex  circle_8h.tex  (+33 more)
search/: all_0.js  enums_0.js  enums_1.js  functions_4.js  functions_9.js
source/: CMakeLists.txt  circle.cpp  circle.h  editor_controller.cpp  editor_controller.h  editor_model.cpp  editor_model.h  editor_view.cpp  editor_view.h  line.cpp  line.h  main.cpp  menu_enums.h  shape.h
(+18 files in other folders)
